docs/view-session-management/versions/1.0/index.md
---
layout: page
title: Horizon View Session Enhancement SDK v1.0
hide:
  #- navigation
  - toc
---

The VMware View Session Enhancement Software Development Kit (SDK) allows software engineers to write host-side and client-side applications and allow communications between a clients and remote desktop. The Session Enhancement SDK is comprised of a Remote Procedure Call (RPC) API and Overlay API.

The RPC API provides an asynchronous, callback driven communications channel between applications running on the remote desktop and a plugin running on the client endpoint. The RPC API also handles marshaling / un-marshaling of parameters. The Overlay API solves the problem of displaying rendered images on the client so that they appear to the user to be a local window on the remote desktop.

This SDK is free, public and unsupported. However, we do offer Paid Development Consulting on request. Please contact us at [Horizon-View-Session-Enhancement-SDK-Support@vmware.com](mailto:Horizon-View-Session-Enhancement-SDK-Support@vmware.com) for more information.

## Downloads

By downloading, installing, or using the Software, you agree to be bound by the terms of [VMware’s Software Development Kit License Agreement]() unless there is a different license provided in or specifically referenced by the downloaded file or package. If you disagree with any terms of the agreement, then do not use the Software.

| Name | Version | Size | MD5 |   |
| --- | --- | --- | --- | --- |
| Horizon View Session Enhancement SDK for Windows | 1.0 |   |  | [Download](#) { .md-button .md-button--primary } |
| Horizon View Session Enhancement SDK for Linux | 1.0 |   |  | [Download](#) { .md-button .md-button--primary } |

## Documentation and Reference

| Name | Size |
| --- | --- |
| API References @span |   |
| [VMware Horizon View Session Enhancement SDK Agreement](View%20Session%20Enhancement%20SDK%20Agreement%201.0%20(FINAL).pdf) | 231.9  KB |
| Development Guides @span |   |
| [VMware Horizon View Session Enhancement SDK API Guide](VSESDKGuide.pdf) | 294.5  KB |
| OSS @span |   |
| [Horizon View Session Enhancement SDK 1_0 Open Source License.txt](#) | 5.1 KB |

## Top Community Sample Code

| Name | Contributor | Language |
| --- | --- | --- |
| [Infrastructure Pain Points Overview](https://github.com/euc-dev/euc-samples/tree/main/Horizon-Samples/infrastructure-pain-points-overview) | VMkbruesch | 	vRealize Ops Dashboard |
