docs/view-session-management/versions/3.1/index.md
---
layout: page
title: Horizon View Session Enhancement SDK v3.1
#permalink: /sdks/horizon/view-session-management
hide:
  #- navigation
  - toc
---

The VMware View Session Enhancement Software Development Kit (SDK) allows software engineers to write host-side and client-side applications and allow communications between a clients and remote desktop. The Session Enhancement SDK is comprised of a Remote Procedure Call (RPC) API and Overlay API.

The RPC API provides an asynchronous, callback driven communications channel between applications running on the remote desktop and a plugin running on the client endpoint. The RPC API also handles marshaling / un-marshaling of parameters. The Overlay API solves the problem of displaying rendered images on the client so that they appear to the user to be a local window on the remote desktop.

This SDK is free and public. To obtain technical support for the use of the SDK, Please submit a Support Request (SR) via myvmware.com to get help from the VMware Global Support. (GSS).

## Downloads

By downloading, installing, or using the Software, you agree to be bound by the terms of [VMware’s Software Development Kit License Agreement]() unless there is a different license provided in or specifically referenced by the downloaded file or package. If you disagree with any terms of the agreement, then do not use the Software.

| Name | Version | Size | MD5 |   |
| --- | --- | --- | --- | --- |
| Horizon View Session Enhancement SDK | 3.1 | 65.6 MB |  | [Download](https://my.vmware.com/group/vmware/get-download?downloadGroup=CART16Q4_VIEWSESSION_VDPSERVICE_SDK310){ .md-button .md-button--primary }  |

## Top Community Sample Code

| Name | Contributor | Language |
| --- | --- | --- |
| [Infrastructure Pain Points Overview](https://developer.omnissa.com/horizon/sdks/view-session-management/samples/infrastructure-pain-points-overview) | VMkbruesch | 	vRealize Ops Dashboard |